--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 fastapi==0.115.6
 uvicorn[standard]==0.32.1
 supabase==2.10.0
-python-dotenv==1.0.1
+pandas==2.2.3
+reportlab==4.2.5
+python-dateutil==2.9.0.post0
