--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,8 @@ fastapi==0.115.6
 uvicorn[standard]==0.32.1
 supabase==2.10.0
 pandas==2.2.3
-reportlab==4.2.5
+matplotlib==3.9.2
+xhtml2pdf==0.2.16
 python-dateutil==2.9.0.post0
 google-cloud-aiplatform>=1.58.0
 vertexai>=1.0.0
