--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
-fastapi==0.115.6
-uvicorn[standard]==0.32.1
-supabase==2.10.0
 pandas==2.2.3
-matplotlib==3.9.2
-xhtml2pdf==0.2.16
-python-dateutil==2.9.0.post0
-google-cloud-aiplatform>=1.58.0
-vertexai>=1.0.0
-tabulate==0.9.0
-playwright==1.49.0
+numpy==2.1.3
 
+matplotlib==3.9.2
+
+supabase==2.12.0
+httpx==0.27.2
+
+tabulate==0.9.0
+
+playwright==1.49.1
+
+google-cloud-aiplatform==1.71.1
+vertexai==1.71.1
+google-auth==2.36.0
