--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,11 @@
-pandas==2.2.3
-numpy==2.1.3
-
-matplotlib==3.9.2
-
-supabase==2.12.0
-httpx==0.27.2
-
+pandas==2.2.2
+matplotlib==3.9.0
 tabulate==0.9.0
 
-playwright==1.49.1
+supabase==2.6.0
+postgrest==0.16.8
 
-google-cloud-aiplatform==1.71.1
-vertexai==1.71.1
-google-auth==2.36.0
+playwright==1.46.0
+
+google-cloud-aiplatform==1.67.0
+vertexai==1.67.0
