--- a/.github/workflows/relatorio_gerencial.yml
+++ b/.github/workflows/relatorio_gerencial.yml
@@ -29,7 +29,7 @@ jobs:
       SUPABASE_B_URL: ${{ secrets.SUPABASE_B_URL }}
       SUPABASE_B_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_B_SERVICE_ROLE_KEY }}
 
-      # ✅ compat: alguns scripts/clients usam os nomes "genéricos"
+      # compat: alguns scripts/clients usam os nomes "genéricos"
       SUPABASE_URL: ${{ secrets.SUPABASE_B_URL }}
       SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_B_SERVICE_ROLE_KEY }}
 
@@ -85,6 +85,11 @@ jobs:
             # não printa segredos, só OK/MISSING
             print(f"{k}={'OK' if v else 'MISSING'}")
           PY
+
+      - name: Autenticar no Google Cloud
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: ${{ secrets.VERTEX_SA_JSON }}
 
       - name: Run Gerencial
         run: |
